Fix scrollbar appearing in #instruction section of quick-recipe.

--- a/Source/E133.Web/app/quick-recipe/assets/css/main.scss
+++ b/Source/E133.Web/app/quick-recipe/assets/css/main.scss
@@ -73,7 +73,6 @@
         #instructions {
             height: 100%;
             overflow: hidden;
-            overflow-y: auto;
             position: relative;
 
             .section {
